--- a/exercise3/alternative/CC_Ex3/MvcWebRole1/Web.config
+++ b/exercise3/alternative/CC_Ex3/MvcWebRole1/Web.config
@@ -61,10 +61,20 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </sessionState>
+    
+    <!-- set timeout to 5 minutes and max request size to 50MB -->
+    <httpRuntime executionTimeout="300" maxRequestLength="51200"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
+
+    <security>
+      <requestFiltering>
+        <!-- allow 50MB of uploads -->
+        <requestLimits maxAllowedContentLength="52428800" />
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
